# reddit-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
migrations/2020-02-23-164845_create_subscribers/: down.sql  up.sql
migrations/2020-03-13-183741_commands/: up.sql
migrations/2020-03-15-151718_command_data/: down.sql  up.sql
migrations/2020-03-15-155708_subscription_schedule/: down.sql  up.sql
migrations/2020-03-20-172844_dialogs/: down.sql  up.sql
src/: bot.rs  db.rs  lib.rs  main.rs  models.rs  reddit.rs  schema.rs  task.rs  telegram.rs
src/bot/: bot.rs  commands.rs  error.rs  mod.rs
src/bot/dialogs/: feedback.rs  mod.rs  subscribe.rs  unsubscribe.rs
src/db/: client.rs  mod.rs  models.rs  schema.rs  test_helpers.rs
src/reddit/: client.rs  error.rs  mod.rs  post.rs  test_helpers.rs
src/task/: task.rs
src/telegram/: client.rs  error.rs  helpers.rs  mod.rs  test_helpers.rs  types.rs
