[package]
name = "reddit-bot"
version = "0.1.0"
authors = ["Aldis Ameriks <aldis.ameriks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.10"
chrono = "0.4"
num = "0.2.1"
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
futures = "0.3.4"
libsqlite3-sys = { version = "*", features = ["bundled"] }
strum = "0.18.0"
strum_macros = "0.18.0"
regex = "1"

[dev-dependencies]
mockito = "0.23.0"
serial_test = "0.4.0"
