[package]
name = "reddit-bot"
version = "0.1.0"
authors = ["Aldis Ameriks <aldis.ameriks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4.19"
num = "0.4.0"
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
futures = "0.3.21"
libsqlite3-sys = { version = "*", features = ["bundled"] }
strum = "0.24.1"
strum_macros = "0.24.0"
regex = "1"
ua_generator = "0.3.5"

[dev-dependencies]
mockito = "0.31.0"
serial_test = "0.7.0"
